@@ -466,6 +466,7 @@ Roger Irwin
 Atsuo Ishimoto
 Paul Jackson
 Ben Jackson
+Manuel Jacob
 David Jacobs
 Kevin Jacobs
 Kjetil Jacobsen
